<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blueGreen"
    tools:context=".ui.map.HelpFixedStationActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:elevation="4dp"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="2dp"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@android:color/white">

        <TextView
            android:id="@+id/toolbar_title"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textColor="@android:color/white" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/layaout_subtitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/glider_subtitle"
            android:textColor="@android:color/white"
            android:gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceSmall"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_title2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layaout_subtitle">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/icon_legend"
            android:textColor="@android:color/white"
            android:gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceSearchResultTitle"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_buoy"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_title2"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:src="@drawable/ic_map_glider">
        </ImageView>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/glider"
            android:textColor="@android:color/white"
            android:textAppearance="?android:attr/textAppearanceSmall"/>
    </LinearLayout>
</RelativeLayout>